--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
+GameDefaultMap=/Game/ExoSemaine2/Maps/BaseMap.BaseMap
+EditorStartupMap=/Game/ExoSemaine2/UIMenu/MenuMap.MenuMap
 GlobalDefaultGameMode="/Script/TPCPPGIT.TPCPPGITGameMode"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
