--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ExoSemaine2/Maps/BaseMap.BaseMap
 EditorStartupMap=/Game/ExoSemaine2/UIMenu/MenuMap.MenuMap
-GlobalDefaultGameMode=/Game/ExoSemaine2/Fluide/HighFieldPainterGameMode.HighFieldPainterGameMode_C
+GlobalDefaultGameMode=/Game/ExoSemaine2/MainGameMode.MainGameMode_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
